[package]
edition = "2021"
name = "egglog-demo"
version = "0.5.0"
description = "Web demo for egglog, an e-graph library for equality saturation and term rewriting."
license = "MIT"
repository = "https://github.com/egraphs-good/egglog-demo"

[lib]
crate-type = ["cdylib"]


[dependencies.egglog-experimental]
default-features = false
features = []
path = "egglog-upstream"

[dependencies]
wee_alloc = "0.4.5"
log = "0.4.19"
wasm-logger = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = [
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  "MessageEvent", # "Url",
  # "Window",
  # "Location",
  # "Document",
  # "HtmlElement",
  # "Node",
  # "Text",
  "Worker",
  "DedicatedWorkerGlobalScope",
] }
