[package]
edition = "2024"
name = "egglog-demo"
version = "0.5.0"
description = "Web demo for egglog, an e-graph library for equality saturation and term rewriting."
license = "MIT"
repository = "https://github.com/egraphs-good/egglog-demo"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.19"
egglog = { git = "https://github.com/saulshanabrook/egg-smol.git", branch = "update-deps", default-features = false, features = ["serde", "graphviz"]  }
egglog-experimental = { git = "https://github.com/egraphs-good/egglog-experimental", branch = "update-deps", default-features = false }
wasm-logger = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3.64", features = [
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  "MessageEvent", # "Url",
  # "Window",
  # "Location",
  # "Document",
  # "HtmlElement",
  # "Node",
  # "Text",
  "Worker",
  "DedicatedWorkerGlobalScope",
] }

# Use patched version of egglog in experimental
[patch.'https://github.com/egraphs-good/egglog']
egglog = { git = "https://github.com/saulshanabrook/egg-smol.git", branch = "update-deps" }
egglog-ast = { git = "https://github.com/saulshanabrook/egg-smol.git", branch = "update-deps" }

# Use patched version of egraph-serialize for newer random version
[patch.crates-io]
egraph-serialize = { git = "https://github.com/saulshanabrook/egraph-serialize.git", branch = "update-deps" }
graphviz-rust = { git = "https://github.com/saulshanabrook/graphviz-rust.git", branch = "master" }
